--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="img/Logo.png"> 
     <title>Casa Netuno</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
 </head>
 
@@ -39,12 +40,15 @@
       <li>
         Bebidas</div></a>
       </li>
-    
-
-    </ul>
+     </ul>
   </nav>
   
 </body>
 <footer>
+  
+  <div class="icon">
+  <i class="fa-brands fa-instagram"></i>  
+  <i class="fa-brands fa-whatsapp"></i>
+</div>
   
 </footer>
