--- a/Bebidas.html
+++ b/Bebidas.html
@@ -70,10 +70,8 @@
       </div>
   
 
-    <h3>Cerveijas Latas</h3>
+    <h3 class="cerveijas">Cerveijas Latas</h3>
     
-
-
     <div class="tipo">
       <p>
         Heineken
@@ -103,7 +101,7 @@
         <p></p>
         </div>
 
-        <h3>Águas</h3>
+        <h3 class="aguas">Águas</h3>
           
 
         <div class="tipo">
