--- a/Empanadas.html
+++ b/Empanadas.html
@@ -149,7 +149,10 @@
       
   </section>
   <footer>
-  
+    <div class="icon">
+      <i class="fa-brands fa-instagram"></i>  
+      <i class="fa-brands fa-whatsapp"></i>
+    </div>
   </footer>  
 </body>
 
