--- a/Sanduiche.html
+++ b/Sanduiche.html
@@ -101,7 +101,10 @@
                
   </section>
   <footer>
-  
+    <div class="icon">
+      <i class="fa-brands fa-instagram"></i>  
+      <i class="fa-brands fa-whatsapp"></i>
+    </div>
   </footer>    
 </body>
 </html>
