--- a/Sanduiche.html
+++ b/Sanduiche.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="img/Logo.png"> 
     <title>Casa Netuno</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
 </head>
 
